# chancela

./: .dockerignore  .editorconfig  .env  .gitattributes  .gitignore  Cargo.toml  Dockerfile.hardened  SPEC-COVERAGE.md  VERSIONING.md  docker-compose.hardened.yml  docker-compose.override.yml  docker-compose.yml  license.md  mkdocs.yml  package-lock.json  package.json  readme.md  requirements-docs.in  requirements-docs.txt  rustfmt.toml  spec.md
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
crates/chancela-api/: Cargo.toml  PRIVACY.md
crates/chancela-api/src/: actor.rs  acts.rs  apikeys.rs  archive_package.rs  arquivo.rs  asic_signature_validation.rs  asic_signing.rs  attestation.rs  auth_token.rs  authz.rs  backup.rs  backup_recovery.rs  batch_signing.rs  books.rs  bundles.rs  cache.rs  cae.rs  chronology.rs  cluster.rs  cluster_chaos_tests.rs  cluster_feed.rs  cluster_route.rs  cluster_shared_state.rs  cluster_watchdog.rs  connector_jobs.rs  cors.rs  credential_resolve.rs  dashboard.rs  data.rs  data_status.rs  database.rs  delegations.rs  documents.rs  dto.rs  email.rs  email_locales.rs  email_template.rs  entities.rs  env_overrides.rs  env_overrides_handler.rs  (+48 more)
crates/chancela-api/tests/: README.md  act_reopen.rs  act_revert.rs  active_sessions.rs  apikey_auth.rs  archive_package.rs  archive_package_order.rs  archive_package_signatures.rs  asic_signature_validation.rs  attestation_key_at_create.rs  auth_settings_slice.rs  backup_recovery_drill.rs  batch_signing.rs  cc_signing.rs  closed_book_acts.rs  cmd_csc_failover.rs  cmd_signing.rs  connector_allowlist.rs  create_user_role.rs  data_key_ops.rs  external_signer_invites.rs  external_signing_envelopes.rs  first_admin_bootstrap.rs  law_reference_coverage.rs  local_pkcs12_signing.rs  ltv.rs  notifications.rs  official_signature_import.rs  paper_import.rs  privacy.rs  rbac_ledger_verify.rs  recovery_rbac.rs  remote_signing.rs  scap.rs  seed_dataset.rs  signing_configure_gate.rs  signup_and_invites.rs  suite_archive_privacy.rs  suite_auth.rs  suite_records.rs  (+7 more)
crates/chancela-apikey/: Cargo.toml
crates/chancela-apikey/src/: grant.rs  hex.rs  key.rs  lib.rs  ratelimit.rs
crates/chancela-archive/: Cargo.toml
crates/chancela-archive/src/: lib.rs
crates/chancela-authz/: Cargo.toml
crates/chancela-authz/src/: assignment.rs  delegation.rs  lib.rs  permission.rs  role.rs  scope.rs
crates/chancela-cades/: Cargo.toml  TESTING.md
crates/chancela-cades/src/: attrs.rs  builder.rs  error.rs  lib.rs  oids.rs  raw_signature.rs  tests.rs  validate.rs
crates/chancela-cae/: Cargo.toml  TESTING.md
crates/chancela-cae/data/: cae_rev3.json  cae_rev4.json
crates/chancela-cae/fixtures/: cae_corrupt.json  cae_update.json  siconf_node.html  smi_version_catalog.csv
crates/chancela-cae/src/: cache.rs  catalog.rs  dataset.rs  error.rs  lib.rs  model.rs  source.rs
crates/chancela-cae/tests/: cache.rs  catalog.rs  fidelity.rs  integrity.rs  network.rs  obtain.rs  obtain_chain.rs  obtain_json.rs  obtain_smi.rs
crates/chancela-cli/: Cargo.toml
crates/chancela-cli/src/: args.rs  commands.rs  main.rs  util.rs
crates/chancela-cli/tests/: cli.rs
crates/chancela-cmd/: Cargo.toml  TESTING.md
crates/chancela-cmd/fixtures/: ama_encryption_cert.pem  ccmovelsign_error.xml  ccmovelsign_response.xml  get_certificate_response.xml  soap_fault.xml  validateotp_rejected.xml  validateotp_response.xml
crates/chancela-cmd/src/: config.rs  error.rs  field_encryption.rs  flow.rs  lib.rs  mock.rs  soap.rs  transport.rs
crates/chancela-cmd/tests/: mock_flow.rs  network.rs
crates/chancela-connectors/: Cargo.toml
crates/chancela-connectors/src/: auth.rs  config.rs  error.rs  ftps.rs  google_drive.rs  graph.rs  http.rs  lib.rs  local.rs  model.rs  network.rs  retry.rs  s3.rs  sftp.rs  smb.rs  webdav.rs
crates/chancela-connectors/tests/: protocol_contracts.rs  s3_contract.rs  security_contracts.rs
crates/chancela-core/: Cargo.toml
crates/chancela-core/src/: act.rs  book.rs  document_model.rs  entity.rs  error.rs  external_signing.rs  group.rs  lib.rs  profile.rs  rules.rs  seal.rs  tenant.rs  termo.rs
crates/chancela-core/tests/: back_compat.rs  domain_contracts.rs  seal_preimage_freeze.rs
crates/chancela-csc/: Cargo.toml
crates/chancela-csc/fixtures/: authorize.json  credentials_list.json  error_invalid_otp.json  error_invalid_request.json  oauth_token.json
crates/chancela-csc/src/: client.rs  config.rs  error.rs  lib.rs  mock.rs  rest.rs  source.rs  transport.rs
crates/chancela-csc/tests/: mock_flow.rs  network.rs  remote_source.rs
crates/chancela-doc/: Cargo.toml
crates/chancela-doc/examples/: check_pdfa.rs  write_catalog_pdfs.rs  write_pdfua_fixture.rs
crates/chancela-doc/src/: accessibility.rs  font.rs  layout.rs  lib.rs  pdfa.rs  selfcheck.rs  tests.rs  xmp.rs
crates/chancela-doc/tests/: pades_roundtrip.rs
crates/chancela-law/: Cargo.toml
crates/chancela-law/data/: law_corpus.json
crates/chancela-law/src/: corpus.rs  dataset.rs  error.rs  lib.rs  model.rs  source.rs
crates/chancela-law/tests/: authenticity.rs  corpus.rs  dre_approved_artifact_guard.rs  dre_capture_manifest.rs  fidelity.rs
crates/chancela-ledger/: Cargo.toml
crates/chancela-ledger/src/: lib.rs
crates/chancela-mcp/: Cargo.toml
crates/chancela-mcp/src/: bridge.rs  config.rs  error.rs  jsonrpc.rs  lib.rs  registry.rs  server.rs
crates/chancela-mcp/tests/: live_api.rs
crates/chancela-pades/: Cargo.toml  TESTING.md
crates/chancela-pades/src/: appearance.rs  archive_timestamp.rs  (+10 more)
crates/chancela-registry/: Cargo.toml  TESTING.md
crates/chancela-scap/: Cargo.toml
crates/chancela-server/: Cargo.toml
crates/chancela-signing/: Cargo.toml  TESTING.md
crates/chancela-smartcard/: Cargo.toml  TESTING.md
crates/chancela-store/: Cargo.toml
crates/chancela-templates/: Cargo.toml  build.rs
crates/chancela-tsa/: Cargo.toml  TESTING.md
crates/chancela-tsl/: .gitattributes  Cargo.toml  TESTING.md
crates/chancela-worker/: Cargo.toml
crates/chancela-xades/: Cargo.toml  TESTING.md
crates/chancela-zk/: Cargo.toml
(+1108 files in other folders)
