[workspace]
resolver = "3"
members = ["crates/*"]
exclude = ["apps/desktop/src-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = ["Chancela contributors"]
repository = "https://github.com/chancela/chancela"

[workspace.dependencies]
# Internal crates (path deps so intra-workspace edges resolve without a registry).
chancela-core = { path = "crates/chancela-core" }
chancela-ledger = { path = "crates/chancela-ledger" }
chancela-signing = { path = "crates/chancela-signing" }
chancela-archive = { path = "crates/chancela-archive" }
chancela-api = { path = "crates/chancela-api" }
# Signature-middleware crates (t4). See .orchestration/plans/t4.md §2.1 for the dependency DAG.
chancela-cades = { path = "crates/chancela-cades" }
chancela-smartcard = { path = "crates/chancela-smartcard" }
chancela-cmd = { path = "crates/chancela-cmd" }
chancela-tsl = { path = "crates/chancela-tsl" }
chancela-tsa = { path = "crates/chancela-tsa" }
chancela-pades = { path = "crates/chancela-pades" }
# Certidão permanente registry integration (t11).
chancela-registry = { path = "crates/chancela-registry" }
# Extensive CAE library + auto-update (t14). Leaf crate; no new third-party deps (everything it
# needs — serde/serde_json/sha2/time/reqwest/thiserror — is already declared below).
chancela-cae = { path = "crates/chancela-cae" }
# Full-text law corpus (t55): the complete text of every cited diploma, article by article, with
# per-article DRE provenance + a hard authenticity gate. Mirrors chancela-cae (vendored source +
# generator + include_str! + folded search). Leaf crate; needs only serde/serde_json/sha2/thiserror
# (all declared below) + reqwest behind the opt-in `network` feature. See .orchestration/plans/t55.md.
chancela-law = { path = "crates/chancela-law" }
# Durable system of record (t30): embedded SQLite store + hot-backup. Sits between the domain
# crates and chancela-api in the DAG (core, ledger, registry → chancela-store → chancela-api);
# must NOT depend on chancela-api (no cycle). See .orchestration/plans/t30.md §2.
chancela-store = { path = "crates/chancela-store" }
# Template catalog engine + document/PDF-A generation (t48, Wave C). `chancela-templates` renders
# records → DocumentModel via minijinja; `chancela-doc` writes DocumentModel → PDF/A-2u over lopdf.
# The shared DocumentModel/LifecycleStage seam lives in chancela-core so both are truly parallel.
# DAG (no cycles): core → templates → api; templates → doc → api. See .orchestration/plans/t48.md §2.
chancela-templates = { path = "crates/chancela-templates" }
chancela-doc = { path = "crates/chancela-doc" }
# Scoped RBAC security core (t64): permission catalog + Global/Entity/Book scopes + roles-as-data +
# scoped delegation + the escalation invariants. Pure leaf (serde/uuid/time only); must NOT depend on
# chancela-api. See .orchestration/plans/t64.md §3.
chancela-authz = { path = "crates/chancela-authz" }
# API-key model + key→RBAC-principal seam (t65): sha256-hashed shown-once keys, per-key rate limiting,
# and the attenuation invariant (a key's authority ⊆ its creator's). Pure leaf; depends on
# chancela-authz + sha2/rand_core/serde/time/uuid — must NOT depend on chancela-api/store. See
# .orchestration/plans/t65.md §3.1/§3.2.
chancela-apikey = { path = "crates/chancela-apikey" }

# Third-party (conservative, declared once so every crate inherits identical versions).
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }
# minijinja (t48 D1): runtime text-interpolation for the template catalog. Templates are shippable,
# per-locale *content* (not compile-time askama structs); minijinja renders directly from any
# serde::Serialize record. Apache-2.0, serde-only (no new transitive-dep risk to the der-0.7 pins).
# Pinned per plan §1-D1. See .orchestration/plans/t48.md §1.
minijinja = "2.21.0"

# --- Signature middleware (t4) ---------------------------------------------------------
# RustCrypto ASN.1 stack is mid-migration; these der-0.7-family pins are LOAD-BEARING.
# Do NOT bump der/spki/sha2/ecdsa/p256 to their "latest" — the newer generation breaks the
# only stable cms/x509-cert 0.2. See .orchestration/plans/t4.md §1.1.
der = { version = "0.7", features = ["oid", "pem"] }         # keep at 0.7 (0.8 breaks cms/x509-cert 0.2)
spki = "0.7"                                                  # keep at 0.7 (matches cms/x509-cert 0.2)
cms = { version = "0.2", features = ["builder"] }            # RFC 5652 SignedData; builder = assemble CAdES
x509-cert = { version = "0.2", features = ["builder", "pem"] } # cert parse/build + self-signed test certs
x509-tsp = "0.1"                                             # RFC 3161 ASN.1 types only (we drive HTTP/verify)
rsa = "0.9"                                                  # RSA-PKCS1-SHA256 (CC v1, CMD)
# rand_core 0.6 is the RNG generation of the whole der-0.7/RustCrypto-0.9 family (rsa 0.9,
# p256 0.13, ecdsa 0.16 all pull rand_core 0.6.4 via signature 2.2). Its `getrandom` feature
# exposes `rand_core::OsRng`, which implements the `CryptoRngCore` bound that
# `FieldEncryptor::AmaRsa` (chancela-cmd) requires — a CSPRNG for PROD CMD field encryption,
# no hand-rolled randomness. Supplied by chancela-signing (t4-e8). Unifies with the already
# resolved rand_core 0.6.4; do NOT bump to 0.9/0.10 (that generation is not rsa 0.9's bound).
rand_core = { version = "0.6", features = ["getrandom"] }   # OsRng CSPRNG for CMD field encryption
p256 = "0.13"                                                # P-256 (CC v2); default features include ecdsa
ecdsa = { version = "0.16", features = ["der"] }            # DER-encode ECDSA r,s for CMS
pcsc = "2.9"                                                 # PC/SC reader detection (Win/macOS/Linux)
cryptoki = "0.12"                                            # PKCS#11 (Autenticacao.gov middleware); prebuilt bindings
quick-xml = { version = "0.41", features = ["serialize"] }  # TSL parse + SOAP/XML emit
roxmltree = "0.21"                                          # read-only XML parse alternative
# lopdf: DEVIATION from t4.md §1.1 — 0.43.0's default `time` datetime backend fails to compile
# against time 0.3.45 (uses `FormatItem::StringLiteral`, removed from `time`). Drop that backend;
# keep chrono+jiff+rayon (the rest of the default set) so datetime + parallelism still work.
lopdf = { version = "0.43", default-features = false, features = ["chrono", "jiff", "rayon"] } # object-level PDF (PAdES sig dict built by us)
base64 = "0.22"                                             # CMD wire fields, PEM
# scraper (html5ever): malformed-HTML-tolerant DOM/text for the certidão permanente parser (t11).
# Independent of the load-bearing der-0.7 pins; used only to get a clean DOM, extraction is
# label-driven off the legally-stable Portuguese field names. Exact patch pinned below.
scraper = "0.23"
# reqwest: rustls avoids the Linux OpenSSL build dep; native certs keep the OS trust store for
# TSA/CA chains. `blocking` supports chancela-tsa's synchronous TsaTransport (no tokio dep, §2.1).
# DEVIATION from t4.md §1.1/§4: the plan's `rustls-tls-native-roots` feature is a reqwest-0.12
# name; in 0.13 it split into `rustls` (backend) + `rustls-native-certs` (OS trust store).
reqwest = { version = "0.13", default-features = false, features = [
    "rustls",
    "rustls-native-certs",
    "json",
    "blocking",
] }

# --- Durable system of record (t30) ----------------------------------------------------
# rusqlite `bundled` compiles SQLite 3.5x from vendored C via `cc` and static-links it — a
# self-contained single-file store, no system libsqlite. License MIT (SQLite itself is public
# domain). The C-toolchain cost is already paid by pcsc/cryptoki; the build-time cost of
# compiling SQLite from source is real but one-off. Encryption (SQLCipher, A3) is a later
# `bundled-sqlcipher` feature swap issuing `PRAGMA key` — no schema/caller change. Independent
# of the der-0.7/RustCrypto pins above (libsqlite3-sys pulls no ASN.1 crates). See t30.md §D1.
rusqlite = { version = "0.39", features = ["bundled"] }
# zip: pure-Rust archive writer for the hot-backup bundle (VACUUM INTO db + JSON sidecars +
# manifest → one .zip). MIT. Default features are fine (deflate); no native dep. See t30.md §D6.
zip = "2"

# --- Audit attestation & optional passwords (t29) --------------------------------------
# argon2 (argon2id): password hashing/verification (a single PHC string) AND the separate KEK
# derivation (hash_password_into) that wraps each user's P-256 attestation key. Pulls
# password-hash 0.5 + blake2 — NEITHER touches the der/spki/cms/x509-cert 0.7 family, and its
# rand_core resolves to the same 0.6.x generation as p256 0.13 / rsa 0.9 above. argon2id (not
# i/d) is the standard side-channel-and-GPU-balanced default; default params. See t29.md §3.
argon2 = "0.5"
# chacha20poly1305 (XChaCha20-Poly1305): the AEAD that encrypts the 32-byte P-256 secret scalar
# at rest in users.json. Chosen over AES-GCM — pure-Rust, no AES-NI-detection surface, and its
# 24-byte random nonce removes any nonce-counter to manage across restarts. Pulls aead 0.5 +
# chacha20 + poly1305; independent of the der-0.7 pins (no ASN.1 crates). See t29.md §3.
chacha20poly1305 = "0.10"

[profile.release]
lto = "thin"
strip = true
