[package]
name = "chancela-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Axum HTTP layer for Chancela: in-memory entity CRUD and ledger verification over the domain core (ARC-02, thin API)."

[features]
default = []
sqlcipher = ["chancela-store/sqlcipher"]
# wp14 Phase 2: enable the off-by-default PostgreSQL durability backend (self-hosted server only).
# Propagates to chancela-store's `postgres` feature so `CHANCELA_DB_BACKEND=postgres` + `DATABASE_URL`
# can select it at runtime. Default features are unchanged, so the desktop/browser embedded builds
# and the plain `cargo build` stay SQLite-only with an unchanged dependency graph.
postgres = ["chancela-store/postgres"]
# wp14 Phase 4: enable the OPTIONAL Redis cache-aside backend. OFF by default; when on, the cache is
# still inert unless `REDIS_URL`/`REDIS_URL_FILE` is set at runtime (else NullCache). The in-process
# `Ledger::verify()` memo (the real single-node win) needs NO feature — it is always compiled.
redis = ["dep:redis"]

[dependencies]
chancela-apikey = { workspace = true }
chancela-archive = { workspace = true }
chancela-authz = { workspace = true }
chancela-core = { workspace = true }
chancela-ledger = { workspace = true }
chancela-registry = { workspace = true }
chancela-cae = { workspace = true }
chancela-law = { workspace = true }
chancela-store = { workspace = true }
chancela-templates = { workspace = true }
chancela-doc = { workspace = true }
chancela-signing = { workspace = true }
chancela-xades = { workspace = true }
chancela-scap = { workspace = true }
chancela-pades = { workspace = true }
chancela-cmd = { workspace = true }
chancela-csc = { workspace = true }
chancela-smartcard = { workspace = true }
chancela-tsa = { workspace = true }
chancela-tsl = { workspace = true }
argon2 = { workspace = true }
# wp14 Phase 4: in-process cache for the ledger-verify memo + the in-process cache-aside impl.
moka = { workspace = true }
# wp14 Phase 4: OPTIONAL Redis cache-aside backend, gated by the off-by-default `redis` feature.
redis = { workspace = true, optional = true }
axum = { workspace = true }
base64 = { workspace = true }
chacha20poly1305 = { workspace = true }
ecdsa = { workspace = true }
p256 = { workspace = true }
rand_core = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }
x509-cert = { workspace = true }
zip = { workspace = true }
zeroize = "1"

[dev-dependencies]
tower = { workspace = true }
zip = { workspace = true }
chancela-cades = { workspace = true }
der = { workspace = true }
spki = { workspace = true }
rsa = { workspace = true }
p12 = "0.6.3"
# Test-only: assemble a genuine multi-identity PFX (merge two single-identity PFXes' bags) to exercise
# the H1 wrong-identity fail-safe. `yasna` is p12's own ASN.1 backend (already in the lock via p12), so
# this pins no new transitive version.
yasna = "0.5"
